--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,10 +2,10 @@
 
 // Gray and Brand Colors for use across theme
 
-$theme-primary: #2C3E50;
-$theme-success: #18BC9C;
+$theme-primary: #AC2C1F;
+$theme-success: #F1EDED;
 
-$gray-base: #000;
+$gray-base: #000000;
 $gray-darker: lighten($gray-base, 13.5%);
 $gray-dark: lighten($gray-base, 20%);
 $gray: lighten($gray-base, 33.5%);
