--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,7 +3,7 @@
 // Gray and Brand Colors for use across theme
 
 $theme-primary: #AC2C1F;
-$theme-success: #F1EDED;
+$theme-success: #E5E0E0;
 
 $gray-base: #000000;
 $gray-darker: lighten($gray-base, 13.5%);
