add technologies section

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,6 +7,7 @@
     {% include "masthead.html" %}
     {% include "about.html" %}
     {% include "projects.html" %}
+    {% include "tech.html" %}
     {% include "contact.html" %}
     {% include "footer.html" %}
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
