--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -14,6 +14,9 @@
               <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#tech">Tech</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
