--- a/templates/tech.html
+++ b/templates/tech.html
@@ -4,43 +4,78 @@
         <hr class="star-primary">
         <div class="row justify-content-center">
           <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-opa" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/opa.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-java" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/java8-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/java8-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/owasp-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-camel" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/camel-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/camel-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
-            <a class="portfolio-link" href="#modal-tech-opa" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/opa.png" alt="">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/cxf-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/servicemix-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/spring-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/spring-boot-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/apache-maven-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-nodejs" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/nodejs-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/nodejs-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/cxf-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/es6-logo.png" alt="">
+            </a>
+          </div>
+          <div class="col-md-2 portfolio-item">
+              <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+                <img class="img-fluid" src="img/tech/html5-logo.png" alt="">
+              </a>
+            </div>
+          <div class="col-md-2 portfolio-item">
+            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
+              <img class="img-fluid" src="img/tech/aws-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/servicemix-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/linux-logo.png" alt="">
             </a>
           </div>
           <div class="col-md-2 portfolio-item">
             <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/spring-logo.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-2 portfolio-item">
-            <a class="portfolio-link" href="#modal-tech-springboot" data-toggle="modal">
-              <img class="img-fluid img-thumbnail" src="img/tech/spring-boot-logo.png" alt="">
+              <img class="img-fluid" src="img/tech/git-logo.png" alt="">
             </a>
           </div>
         </div>
